compiler/testData/diagnostics/tests/Dollar.kt
package dollar

open class `$$$$$`() {
}
open class `$`() {
}
open class `$$`(`$$$$` : `$$$$$`?) : `$`() {
    val `$$$` : `$$$$$`?
    init {
        <!BACKING_FIELD_USAGE_DEPRECATED!>$`$$$`<!> = `$$$$`
    }
    open public fun `$$$$$$`() : `$$$$$`? {
        return `$$$`
    }
}
